# learnfun

./: .gitignore  CLAUDE.md  CONTEXT.md  api.py  architect.md  docker-compose.yml  plan.md  refactor-plan.md  vision.md
client/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
client/src/: App.tsx  globals.css  main.tsx
client/src/config/: api.ts  constants.ts
client/src/context/: AuthContext.tsx
client/src/lib/: utils.ts  (+2 more)
server/: Dockerfile  pyproject.toml
server/server/: config.py  logging.py  main.py  run_logger.py
server/server/agents/ta/: __init__.py  agent.py  content_generator.py  models.py  personalizer.py  request_handler.py  safety_filter.py
server/server/agents/teacher/: __init__.py  agent.py  audio_utils.py  gemini_session.py  manager.py  system_prompt.py  voice_config.py
server/server/api/: __init__.py  auth.py  bundles.py  events.py  games.py  health.py  join.py  logs.py  room_manager.py  router.py  scores.py  session.py  session_manager.py  ta.py  teacher.py  token.py  tokens.py
server/server/content/: __init__.py  bundles.py  models.py  templates.py
server/server/events/: __init__.py  bus.py  helpers.py  models.py  redis_bridge.py  subjects.py
server/server/storage/: db.py  models.py
server/server/storage/migrations/: 001_initial.sql  002_auth.sql
server/server/storage/queries/: _helpers.py  profiles.py  progress.py  sessions.py  users.py
server/server/sync/: __init__.py  yjs_server.py
server/server/tools/: __init__.py  auth.py  handlers.py  rate_limit.py  registry.py  schemas.py
(+152 files in other folders)
